[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Textures/Scenary/bgTest.jpg" type="Texture" id=1]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Emojis/EmojiAlien.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Emojis/EmojiDeath.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Emojis/EmojiBolac.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Emojis/EmojiOjos.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Scene1.gd" type="Script" id=7]
[ext_resource path="res://Scenes/OverlayIn.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/NoFocusAnimation.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/SFX/1_psico.ogg" type="AudioStream" id=10]
[ext_resource path="res://Assets/SFX/audio_alonso.ogg" type="AudioStream" id=11]
[ext_resource path="res://Assets/SFX/audio_abby.ogg" type="AudioStream" id=12]

[sub_resource type="CanvasItemMaterial" id=1]

[node name="Scene1" type="Node2D"]
script = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 597.0
margin_bottom = 597.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 222, 406 )

[node name="EmojiAlien" parent="." instance=ExtResource( 3 )]
material = SubResource( 1 )
position = Vector2( 54, 269 )
scale = Vector2( 0.25, 0.25 )

[node name="EmojiDeath" parent="." instance=ExtResource( 4 )]
position = Vector2( 541, 280 )
scale = Vector2( 0.1, 0.1 )

[node name="EmojiBolac" parent="." instance=ExtResource( 5 )]
position = Vector2( 322, 39 )
scale = Vector2( 0.3, 0.3 )

[node name="EmojiOjos" parent="." instance=ExtResource( 6 )]
position = Vector2( 197, 528 )
scale = Vector2( 0.25, 0.25 )

[node name="NoFocusAnimation" parent="." instance=ExtResource( 9 )]
visible = false
frame = 55

[node name="OverlayIn" parent="." instance=ExtResource( 8 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true

[node name="audio_alonso" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )

[node name="audio_aby" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
